k8s/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: my.eureka.com
      http:
        paths:
          - path: /
            backend:
              serviceName: eureka-server
              servicePort: 9090
          - path: /actuator/health
            backend:
              serviceName: eureka-server
              servicePort: 9091
    - host: my.kibana.com
      http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 5601
    - host: my.gateway.com
      http:
        paths:
          - backend:
              serviceName: gateway
              servicePort: 5050
    - host: my.admin.com
      http:
        paths:
          - backend:
              serviceName: admin
              servicePort: 1010
    - host: my.rabbitmq.com
      http:
        paths:
          - backend:
              serviceName: rabbitmq
              servicePort: 15672
    - host: my.jenkins.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
    - host: my.gitlab.com
      http:
        paths:
          - backend:
              serviceName: gitlab
              servicePort: 80
